# cargomind-standalone

./: CMakeLists.txt
config/: bppParams.json  bppParams_com.json  bppParams_mass.json  bppParams_space.json  planningParams.json
src/: BlobStoreHelper.cpp  BlobStoreHelper.h  BppROS.cpp  BppROS.h  SGJSONParser.cpp  SGJSONParser.h  WorldStateGenerator.cpp  WorldStateGenerator.h  binpackinggui.cpp  binpackinggui.h  binpackinggui.ui  bppinterface.cpp  defs.h  listitem.cpp  listitem.h  listitem.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  myslider.cpp  myslider.h  sginterface.cpp  sginterface.h  system_gui_node.cpp  ui_binpackinggui.h  ui_listitem.h  wsg_utils.cpp  wsg_utils.h
src/bpa/: Bin.cpp  Bin.h  Box.cpp  Box.h  FittingPoint.cpp  FittingPoint.h  HoldingPlatform.cpp  HoldingPlatform.h  MixedScore.cpp  MixedScore.h  Parameters.h  Point.cpp  Point.h  SimulatedBox.h  bpp_functions.cpp  bpp_functions.h  pp_functions.cpp  pp_functions.h
src/bullet/: Actor.h  PhysicsBullet.cpp  PhysicsBullet.h
